# tejas

./: README.md  biome.json  clover.xml  coverage-final.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: coverage-pages.yml
src/: App.tsx  App.tsx.html  index.html  main.tsx.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  lib.rs  main.rs
src-tauri/src/cmds/: create_user.rs  create_users_table.rs  login_user.rs  set_db.rs
src/adapters/controllers/: AppController.ts  UserController.ts  UserController.ts.html  index.html
src/adapters/hooks/: AuthContext.tsx  AuthContext.tsx.html  ThemeContext.tsx  ThemeContext.tsx.html  index.html
src/adapters/presenters/: AppPresenter.ts  HomePresenter.ts  HomePresenter.ts.html  SignInPresenter.ts  SignInPresenter.ts.html  UserPresenter.ts  UserPresenter.ts.html  index.html
src/adapters/views/: globals.css
src/applications/: InputPorts.ts  InputPorts.ts.html  OutputPorts.ts  OutputPorts.ts.html  RequestDTOs.ts  RequestDTOs.ts.html  ResponseDTOs.ts  ResponseDTOs.ts.html  index.html
src/applications/interactors/: AppInteractor.ts  UserInteractor.ts  UserInteractor.ts.html  index.html
src/domains/: EntityBase.ts  EntityBase.ts.html  ValueObjectBase.ts  ValueObjectBase.ts.html  index.html
src/domains/entites/: AuditLog.ts  AuditLog.ts.html  Database.ts  EncryptionKey.ts  EncryptionKey.ts.html  Greeting.ts  Secret.ts  Secret.ts.html  User.ts  User.ts.html  Vault.ts  Vault.ts.html  index.html
src/domains/repositories/: AuditLogRepository.ts  AuditLogRepository.ts.html  EncryptionKeyRepository.ts  EncryptionKeyRepository.ts.html  IDatabaseRepository.ts  SecretRepository.ts  SecretRepository.ts.html  UserRepository.ts  UserRepository.ts.html  VaultRepository.ts  VaultRepository.ts.html  index.html
src/domains/services/: AuthService.ts  (+12 more)
tests/domains/: AuthService.spec.ts  FailedCount.spec.ts  PasswordHash.spec.ts  Secret.spec.ts  User.spec.ts  Vault.spec.ts
(+70 files in other folders)
