[package]
name = "tejas"
version = "0.1.0"
description = "A Tauri App"
authors = ["me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tejas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
miette = { version = "7", features = ["fancy"] }
turso = "0.2.1"
tauri-plugin-dialog = "2"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
ldap3 = "0.12.1"
chrono = "0.4.42"
