[package]
name = "dharma"
version = "0.1.0"
authors = ["Yu Tokunaga <tokunaga.y@tyco.co.jp>"]
edition = "2021"
description = "Dharma: Tauri-based information asset management system with AD authentication"
license = "Apache-2.0"
repository = "https://github.com/ukihot/dharma"
keywords = ["tauri", "ad", "ldap", "password-security"]
readme = "README.md"

# --------------------
# ライブラリ設定
# --------------------
[lib]
name = "dharma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# --------------------
# ビルド依存
# --------------------
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
miette = { version = "7", features = ["fancy"] }
turso = "0.2.1"
tauri-plugin-dialog = "2"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
ldap3 = "0.12.1"
chrono = "0.4.42"
